--- a/src/GUIPackage/ProjectsMenu.form
+++ b/src/GUIPackage/ProjectsMenu.form
@@ -86,11 +86,12 @@
               <Color blue="37" green="37" red="37" type="rgb"/>
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="6" rowCount="4">
-                <Column editable="true" title="Nume Proiect" type="java.lang.String"/>
+              <Table columnCount="7" rowCount="4">
+                <Column editable="true" title="Project Name" type="java.lang.String"/>
                 <Column editable="true" title="Client" type="java.lang.String"/>
+                <Column editable="true" title="Manager" type="java.lang.String"/>
                 <Column editable="true" title="Start Date" type="java.lang.Object"/>
-                <Column editable="true" title="End_Date" type="java.lang.Object"/>
+                <Column editable="true" title="End Date" type="java.lang.Object"/>
                 <Column editable="true" title="Budget" type="java.lang.Double"/>
                 <Column editable="true" title="Description" type="java.lang.Object"/>
               </Table>
@@ -113,7 +114,7 @@
                   <Editor/>
                   <Renderer/>
                 </Column>
-                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
                   <Renderer/>
@@ -123,7 +124,12 @@
                   <Editor/>
                   <Renderer/>
                 </Column>
-                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
                   <Renderer/>
