--- a/src/GUIPackage/MilestonesMenu.form
+++ b/src/GUIPackage/MilestonesMenu.form
@@ -108,8 +108,8 @@
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="4">
                 <Column editable="true" title="Title" type="java.lang.String"/>
-                <Column editable="true" title="Start_Date" type="java.lang.String"/>
-                <Column editable="true" title="End_Date" type="java.lang.Object"/>
+                <Column editable="true" title="Start Date" type="java.lang.String"/>
+                <Column editable="true" title="End Date" type="java.lang.Object"/>
                 <Column editable="true" title="Description" type="java.lang.Object"/>
               </Table>
             </Property>
